--- a/assets/sass/responsive.sass
+++ b/assets/sass/responsive.sass
@@ -90,9 +90,6 @@
 	.popup-gallery img
 		width: 33.3333%
 		height: 28% 
-	footer .link-bottom
-		+mar-t(40px)	
-
 
 @media screen and (min-width: 500px) and (max-width: 568px) 
 	/* navigation */
